Bug fixes / improvements (alignment with Gold).

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -317,7 +317,7 @@ h1 {
 }
 .modal-body {
   font-size: 1.1em !important;
-  word-break: break-all;
+  word-break: break-word;
   word-wrap: break-word;
 }
 .half-width {
